[package]
name = "pico-epaper"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pico-epaper"
path = "src/main.rs"
test = false
bench = false
doctest = false

[build-dependencies]
config = "0.15.22"


[dependencies]
embassy-embedded-hal = { version = "0.6.0", features = ["defmt"] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-executor = { version = "0.10.0",  features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.1",  features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.10.0",  features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-net = { version = "0.9.1",  features = ["defmt", "icmp", "tcp", "udp", "raw", "dhcpv4", "dhcpv4-hostname", "medium-ethernet", "proto-ipv4", "dns"] }
embassy-futures = { version = "0.1.2"  }
cyw43 = { version = "0.7.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.10.0", features = ["defmt"] }

defmt = "1.0.1"
defmt-rtt = "1.1.0"
fixed = "1.31.0"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = "0.9.3"
reqwless = { version = "0.14.0", default-features = false, features = ["defmt"] }

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-storage = { version = "0.3" }
static_cell = "2.1"
portable-atomic = { version = "1.13.1", features = ["critical-section"] }

[profile.release]
# Keep symbols for probe-rs/defmt backtraces in release firmware.
debug = true
# Better runtime performance and usually smaller firmware.
lto = "fat"
codegen-units = 1
# For Cortex-M binaries this often reduces flash size.
opt-level = "s"

[profile.dev]
# Slight optimization in dev helps timing-sensitive embedded code.
opt-level = 1